added the Login Request model and completed the register user functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
   <nav >
     <ul class="links">
       <a href="/">Login</a>
-      <a href="/link">Signup</a>
+      <a routerLink="signup" href="/link">Signup</a>
       <a href="/link">Timer</a>
     </ul>
   </nav>
