completed login form and successfully retrieving jwt token from backend

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
   <div id="logo">communally</div>
   <nav >
     <ul class="links">
-      <a href="/">Login</a>
+      <a routerLink="login" href="/">Login</a>
       <a routerLink="signup" href="/link">Signup</a>
       <a href="/link">Timer</a>
     </ul>
