--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -1,1 +1,6 @@
-<p>login-form works!</p>
+<form>
+  <h2>Login As a User</h2>
+  <input [(ngModel)]="emailAddress" type="text" name="emailAddress" placeholder="Email Address"/>
+  <input [(ngModel)]="password" type="text" name="password" placeholder="Password"/>
+  <input (click)="loginUser()" type="submit" vaue="Register">
+</form>
