timer successfully implemented

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
     <ul class="links">
       <a routerLink="login" href="/">Login</a>
       <a routerLink="signup" href="/link">Signup</a>
-      <a href="/link">Timer</a>
+      <a routerLink="timer"  href="/link">Timer</a>
     </ul>
   </nav>
 </header>
