--- a/src/app/timer/timer.component.html
+++ b/src/app/timer/timer.component.html
@@ -1,5 +1,6 @@
 <p>timer works!</p>
 <h1>Meditation Timer</h1>
-<button id="startButton">Start</button>
-<button id="pauseButton">Pause</button>
-<button id="endButton">End</button>
+<h2 class="display-timer">{{time}}</h2>
+<button (click)="startTimer()" id="startButton">Start</button>
+<button (click)="pauseTimer()" id="pauseButton">Pause</button>
+<button (click)="stopTimer()" id="endButton">End</button>
