added basic styling for timer

--- a/src/app/timer/timer.component.html
+++ b/src/app/timer/timer.component.html
@@ -1,6 +1,7 @@
-<p>timer works!</p>
 <h1>Meditation Timer</h1>
 <h2 class="display-timer">{{time | time}}</h2>
-<button (click)="startTimer()" id="startButton">Start</button>
-<button (click)="pauseTimer()" id="pauseButton">Pause</button>
-<button (click)="stopTimer()" id="stopButton">End</button>
+<div class="console">
+  <button (click)="startTimer()" id="startButton">Start</button>
+  <button (click)="pauseTimer()" id="pauseButton">Pause</button>
+  <button (click)="stopTimer()" id="stopButton">End</button>
+</div>
