--- a/src/app/timer/timer.component.less
+++ b/src/app/timer/timer.component.less
@@ -26,5 +26,18 @@ button {
 .console {
   display: flex;
   flex-direction: row;
+}
 
+.select-time button {
+  font-size: @third-heirarchy;
+  color: rebeccapurple;
+  background-color: white;
+  box-shadow: -3px 3px 2px 2px rebeccapurple;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
