--- a/src/app/timer/timer.component.html
+++ b/src/app/timer/timer.component.html
@@ -2,14 +2,14 @@
 
 <main class="container">
   <div class="select-time">
-  <button class="updateTimeButton" id="five-minute" (click)="updateTime(300)">5
+  <button class="updateTimeButton" id="five-minute" (click)="updateTime(5)">5
     minutes</button>
   <button class="updateTimeButton" id="ten-minute"
           (click)="updateTime(600)">10 minutes</button>
   <button class="updateTimeButton" id="twenty-minute"
           (click)="updateTime(1200)">20 minutes</button>
   </div>
-  <h2 class="display-timer">{{time | time}}</h2>
+  <app-display-timer [time]="time"></app-display-timer>
 
 <div class="console">
   <button *ngIf="!loggedIn; else elseBlock" (click)="startTimer()"
