added reflectionService to persist reflection with logic to not add content if not there

--- a/src/app/session/session/reflection-form/reflection-form.component.html
+++ b/src/app/session/session/reflection-form/reflection-form.component.html
@@ -1,7 +1,19 @@
 <section>
   <label>Leave a Reflection</label>
-  <input type="text" placeholder="Enter your reflection" />
+  <input [(ngModel)]="currentReflection.entry" type="text"
+         placeholder="Enter your reflection" />
   <label>Add Content</label>
-  <button>Add Content</button>
-  <button (click)="submitForm()">Submit Reflection</button>
+  <button (click)="showContentForm()">Add Content</button>
+
+  <app-content-tile
+    *ngIf="showContent" (submittedContent)="addContent($event)">
+
+  </app-content-tile>
+  <button (click)="submitReflection()">Submit Reflection</button>
+  <div class="content-grid">
+  <p *ngFor="let content of getAllContent()">content</p>
+  </div>
+  <pre>{{currentReflection | json}}</pre>
+  <pre>{{currentSession | json}}</pre>
+  <pre *ngFor="let content of contentList"> {{content | json}}</pre>
 </section>
