--- a/src/app/session/session/reflection-form/reflection-form.component.less
+++ b/src/app/session/session/reflection-form/reflection-form.component.less
@@ -9,3 +9,10 @@ section {
   display: flex;
   flex-direction: column;
 }
+
+.content-grid {
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+
+}
