updated login form to have correct state when going to timer automatically

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
         Login</a>
 
         <a *ngIf="(isLoggedIn | async)"  (click)="userService.logoutUser()"
-           href="/">
+           routerLink="login" href="/">
           Logout</a>
 
       <a *ngIf="!(isLoggedIn | async)" routerLink="signup" href="">Signup</a>
