--- a/src/app/signup-form/signup-form.component.html
+++ b/src/app/signup-form/signup-form.component.html
@@ -4,5 +4,5 @@
          placeholder="User Name" />
   <input [(ngModel)]="emailAddress" type="text" name="emailAddress" placeholder="Email Address"/>
   <input [(ngModel)]="password" type="text" name="password" placeholder="Password"/>
-  <input (click)="registerUser()" type="submit" vaue="Register">
+  <input (click)="registerUser()"  vaue="Register">
 </form>
