added styling to the session submission form

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,5 +1,15 @@
 @import "src/styles.less";
 
+mat-toolbar {
+  display: flex;
+  background-color: rebeccapurple;
+  height: 72px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 32px 0px;
+  color: white;
+}
+
 header {
   display: flex;
   background-color: rebeccapurple;
@@ -8,6 +18,10 @@ header {
   align-items: center;
   padding: 0 32px 0px;
   color: white;
+}
+
+.example-spacer {
+  flex: 1 1 auto;
 }
 
 .links {
