--- a/src/app/session/session/session.component.less
+++ b/src/app/session/session/session.component.less
@@ -8,8 +8,22 @@
 
 .session-details {
   width: 50%;
+  padding: 32px 16px 0 16px;
+}
+
+.session-buttons .mat-button{
+
+  margin: 8px 0 8px 0;
+  padding: 8px;
+  display: flex;
+  justify-content: space-between;
+  color: white;
+  background-color: rebeccapurple;
 }
 
 app-reflection-form {
   width: 50%;
+
 }
+
+
