--- a/src/app/session/timer/display-timer/display-timer.component.less
+++ b/src/app/session/timer/display-timer/display-timer.component.less
@@ -1,6 +1,22 @@
 @import "src/styles.less";
 
-
-h2 {
-  font-size: @zero-heirarchy;
+:host {
+  margin: 10px 19px 10px 19px
 }
+h2 {
+  font-size: @second-heirarchy;
+}
+
+.display-timer {
+  margin: 100px 0px 100px;
+}
+
+//.select-time {
+//  margin: 16px 0px 54px;
+//}
+//
+//.console {
+//
+//    margin: 54px 0px 16px;
+//
+//}
