--- a/src/app/session/timer/timer.component.less
+++ b/src/app/session/timer/timer.component.less
@@ -9,9 +9,9 @@
 
 button {
   font: inherit;
-  font-size: @second-heirarchy;
-  width: 310px;
-  height: 118px;
+  font-size: @fourth-heirarchy;
+  width: 200px;
+  height: 92px;
   background-color: rebeccapurple;
   color: white;
   border-radius:20px;
@@ -26,7 +26,7 @@ button {
 }
 
 .select-time button {
-  font-size: @third-heirarchy;
+
   color: rebeccapurple;
   background-color: white;
   box-shadow: -3px 3px 2px 2px rebeccapurple;
