--- a/src/styles.less
+++ b/src/styles.less
@@ -9,7 +9,10 @@
 @fifth-heirarchy: 16px;
 
 
-body{
-  font-family: Newsreader, Serif;
-  margin: 0;
-}
+//body{
+//  font-family: Newsreader, Serif;
+//  margin: 0;
+//}
+//
+html, body { height: 100%; }
+body { margin: 0; font-family: Newsreader, serif; }
