--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,25 +7,61 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- Toolbar -->
-<header>
-  <div id="logo">communally</div>
-  <nav >
-    <ul class="links">
-      <a *ngIf="!(isLoggedIn | async)"
-         routerLink="login"
-         href="/">
-        Login</a>
+<mat-toolbar>
+<!--  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">-->
+<!--    <mat-icon>menu</mat-icon>-->
+<!--  </button>-->
+  <span class="logo">communally</span>
+<nav class="links">
+  <button *ngIf="!(isLoggedIn | async)" routerLink="login" mat-icon-button
+          class="example-icon login-icon"
+          aria-label="Example icon-button for login">
+    <mat-icon>login</mat-icon> Login
+  </button>
 
-        <a *ngIf="(isLoggedIn | async)"  (click)="userService.logoutUser()"
-           routerLink="login" href="/">
-          Logout</a>
+  <button *ngIf="(isLoggedIn | async)" routerLink="login" mat-icon-button
+          (click)="userService.logoutUser()"
+          class="example-icon logout-icon"
+          aria-label="Example icon-button for logout">
+    <mat-icon>logout</mat-icon> Logout
+  </button>
 
-      <a *ngIf="!(isLoggedIn | async)" routerLink="signup" href="">Signup</a>
-      <a routerLink="timer"  href="">Timer</a>
+  <button *ngIf="!(isLoggedIn | async)" routerLink="signup" mat-icon-button
+          class="example-icon create-icon"
+          aria-label="Example icon-button for signup">
+    <mat-icon>create</mat-icon> Sign Up
+  </button>
 
-    </ul>
-  </nav>
-</header>
+  <button routerLink="timer" mat-icon-button
+          class="example-icon timer-icon"
+          aria-label="Example icon-button for signup">
+    <mat-icon>timer</mat-icon> Timer
+  </button>
+
+
+</nav>
+
+</mat-toolbar>
+
+<!--<header>-->
+<!--  <div id="logo">communally</div>-->
+<!--  <nav >-->
+<!--    <ul class="links">-->
+<!--      <a *ngIf="!(isLoggedIn | async)"-->
+<!--         routerLink="login"-->
+<!--         href="/">-->
+<!--        Login</a>-->
+
+<!--        <a *ngIf="(isLoggedIn | async)"  (click)="userService.logoutUser()"-->
+<!--           routerLink="login" href="/">-->
+<!--          Logout</a>-->
+
+<!--      <a *ngIf="!(isLoggedIn | async)" routerLink="signup" href="">Signup</a>-->
+<!--      <a routerLink="timer"  href="">Timer</a>-->
+
+<!--    </ul>-->
+<!--  </nav>-->
+<!--</header>-->
 
 
 <router-outlet></router-outlet>
