--- a/src/app/login-form/login-form.component.less
+++ b/src/app/login-form/login-form.component.less
@@ -7,9 +7,9 @@
   align-items: center;
 }
 
-h2 {
-  font-size: @second-heirarchy;
-}
+//h2 {
+//  font-size: @second-heirarchy;
+//}
 
 form {
   display: flex;
