--- a/src/app/session/session/reflection-form/reflection-form.component.less
+++ b/src/app/session/session/reflection-form/reflection-form.component.less
@@ -3,6 +3,7 @@
   background-color: rebeccapurple;
   height: 100%;
   color: white;
+  padding: 32px 16px 0 16px;
 }
 
 section {
@@ -10,9 +11,35 @@ section {
   flex-direction: column;
 }
 
+button {
+  display: flex;
+  padding: 10px;
+}
+mat-icon {
+  margin: 10px;
+}
+
+mat-button {
+  background-color: #FF4081;
+
+}
+
 .content-grid {
   display: grid;
   grid-template-rows: repeat(4, 1fr);
   grid-template-columns: repeat(4, 1fr);
+}
 
+mat-form-field {
+  background-color: white;
+  color: rebeccapurple;
+  margin-bottom: 0px;
+}
+
+.mat-form-field-underline {
+  bottom: .675em;
+}
+
+.mat-form-field-wrapper {
+  padding-bottom: 0;
 }
