--- a/src/app/signup-form/signup-form.component.html
+++ b/src/app/signup-form/signup-form.component.html
@@ -1,8 +1,43 @@
-<form>
+<form name="register">
   <h2>Register a user</h2>
-  <input [(ngModel)]="username" type="text" name="username"
-         placeholder="User Name" />
-  <input [(ngModel)]="emailAddress" type="text" name="emailAddress" placeholder="Email Address"/>
-  <input [(ngModel)]="password" type="text" name="password" placeholder="Password"/>
-  <input (click)="registerUser()"  vaue="Register">
+
+
+
+<!--  <input [(ngModel)]="username" type="text" name="username"-->
+<!--         placeholder="User Name" />-->
+
+  <mat-form-field appearance="fill">
+    <mat-label>Enter your User Name</mat-label>
+    <input [(ngModel)]="username" matInput
+           name="username"
+           placeholder="Calm Panda"
+           required>
+  </mat-form-field>
+
+    <mat-form-field appearance="fill">
+      <mat-label>Enter your email</mat-label>
+      <input [(ngModel)]="emailAddress" matInput
+             name="emailAddress"
+             placeholder="meditate@example.com" [formControl]="email"
+              required>
+      <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+    </mat-form-field>
+
+  <mat-form-field appearance="fill">
+    <mat-label>Enter your password</mat-label>
+    <input required [(ngModel)]="password" matInput
+           name="password" [type]="hide ? 'password' :
+    'text'">
+    <button  mat-icon-button matSuffix (click)="hide = !hide"
+             [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+      <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+    </button>
+  </mat-form-field>
+
+  <button (click)="registerUser()"  mat-icon-button color="primary">Sign Up!<mat-icon>create</mat-icon></button>
+
+
+<!--  <input [(ngModel)]="emailAddress" type="text" name="emailAddress" placeholder="Email Address"/>-->
+<!--  <input [(ngModel)]="password" type="text" name="password" placeholder="Password"/>-->
+<!--  <button (click)="registerUser()"  vaue="Register"> Sign Up</button>-->
 </form>
