--- a/src/app/signup-form/signup-form.component.less
+++ b/src/app/signup-form/signup-form.component.less
@@ -7,11 +7,15 @@
   align-items: center;
 }
 
+form .mat-form-field + .mat-form-field {
+  margin-left: 8px;
+}
+
 form {
   display: flex;
   flex-direction: column;
 }
 
-h2 {
-  font-size: @second-heirarchy;
-}
+//h2 {
+//  font-size: @second-heirarchy;
+//}
