--- a/src/app/session/session/mood-dialog-overlay/mood-dialog-overlay.component.less
+++ b/src/app/session/session/mood-dialog-overlay/mood-dialog-overlay.component.less
@@ -1,3 +1,10 @@
+:host {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 
 .mood {
   font-size: 180px;
