--- a/src/styles.less
+++ b/src/styles.less
@@ -16,3 +16,8 @@
 //
 html, body { height: 100%; }
 body { margin: 0; font-family: Newsreader, serif; }
+mat-dialog-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
