--- a/src/app/session/session/reflection-form/reflection-form.component.less
+++ b/src/app/session/session/reflection-form/reflection-form.component.less
@@ -4,6 +4,7 @@
   height: 100%;
   color: white;
   padding: 32px 16px 0 16px;
+  border-radius: 8px;
 }
 
 section {
@@ -12,16 +13,16 @@ section {
 }
 
 button {
+  background-color: #FF4081;
+  width: 200px;
   display: flex;
-  padding: 10px;
+  padding: 4px;
+  height: 50px;
+  margin: 16px;
+  border-radius: 5px;
 }
 mat-icon {
   margin: 10px;
-}
-
-mat-button {
-  background-color: #FF4081;
-
 }
 
 .content-grid {
