--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -10,6 +10,12 @@ mat-toolbar {
   color: white;
 }
 
+nav {
+  display: flex;
+  justify-content: space-around;
+  margin-right: 48px;
+}
+
 header {
   display: flex;
   background-color: rebeccapurple;
@@ -20,9 +26,9 @@ header {
   color: white;
 }
 
-.example-spacer {
-  flex: 1 1 auto;
-}
+//.example-spacer {
+//  flex: 1 1 auto;
+//}
 
 .links {
   display: flex;
