--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,5 +1,5 @@
-<ng-template *ngIf="content">
-  {{content.title}}
+
+ <p *ngIf="content.title"> {{content.title}} </p>
   <a href="{{content.url}}">View Site</a>
-</ng-template>
+
 
