tests passing locally

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
 <!--  </button>-->
   <span class="logo">communally</span>
 <nav class="links">
-  <button routerLink="timer" mat-icon-button
+  <button routerLink="/timer" mat-icon-button
           class="example-icon timer-icon"
           aria-label="Example icon-button for signup">
     <mat-icon>timer</mat-icon> Timer
