--- a/src/app/session/session/reflection-form/reflection-form.component.html
+++ b/src/app/session/session/reflection-form/reflection-form.component.html
@@ -1,6 +1,7 @@
 <section>
   <mat-form-field appearance="fill">
-    <mat-label>You Must Add A Reflection Before Saving Your Session</mat-label>
+   <h2> You Must Add A Reflection Before Saving Your Session</h2>
+
     <input [(ngModel)]="currentReflection.entry" name="reflection"
            matInput placeholder="Enter your reflection" >
   </mat-form-field>
@@ -17,7 +18,7 @@
     <app-content *ngFor="let content of getAllContent()"
     [content]="content"></app-content>
   </div>
-  <pre>{{currentReflection | json}}</pre>
-  <pre>{{currentSession | json}}</pre>
-  <pre *ngFor="let content of contentList"> {{content | json}}</pre>
+<!--  <pre>{{currentReflection | json}}</pre>-->
+<!--  <pre>{{currentSession | json}}</pre>-->
+<!--  <pre *ngFor="let content of contentList"> {{content | json}}</pre>-->
 </section>
